--- a/site/package.json
+++ b/site/package.json
@@ -17,6 +17,7 @@
     "gatsby": "^3.10.2",
     "gatsby-plugin-algolia": "^0.22.1",
     "gatsby-plugin-mailchimp": "^5.2.2",
+    "gatsby-plugin-manifest": "^3.13.0",
     "gatsby-source-contentful": "^5.12.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
