redirect authors page to 404

--- a/netlify.toml
+++ b/netlify.toml
@@ -16,3 +16,9 @@
 
 [[plugins]]
   package = "netlify-plugin-gatsby-cache"
+
+  [[redirects]]
+  from = "/authors"
+  to = "/404"
+  status = 301
+  force = true
