more update content

--- a/site/content/blocks/site/projects/projects-row-1.json
+++ b/site/content/blocks/site/projects/projects-row-1.json
@@ -5,7 +5,7 @@
       "variant": "h2"
     },
     {
-      "text": "Pariatur pariatur commodo sit aliquip commodo minim mollit.",
+      "text": "Drill for structure, mine for grade",
       "variant": "medium"
     }
   ],
@@ -20,7 +20,7 @@
       },
       "text": [
         {
-          "text": "Innovation",
+          "text": "Past Producer",
           "color": "alphaDark"
         },
         {
@@ -29,7 +29,7 @@
           "variant": "h5"
         },
         {
-          "text": "Understand First. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt."
+          "text": "The only permitted underground asset in the Cobalt camp. Past production totalled 9.5 million oz silver, and 300,000 lbs cobalt."
         }
       ],
       "images": [
@@ -57,7 +57,7 @@
       },
       "text": [
         {
-          "text": "Innovation",
+          "text": "Past Producer",
           "color": "alphaDark"
         },
         {
@@ -66,7 +66,7 @@
           "variant": "h5"
         },
         {
-          "text": "Understand First. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt."
+          "text": "In total, 7.1 million oz of silver, and 140,000 lbs cobalt were produced."
         }
       ],
       "images": [
@@ -94,7 +94,7 @@
       },
       "text": [
         {
-          "text": "Innovation",
+          "text": "Past Producer",
           "color": "alphaDark"
         },
         {
@@ -103,7 +103,7 @@
           "variant": "h5"
         },
         {
-          "text": "Understand First. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt."
+          "text": " During its initial production phase the mine output was 897,000 oz of silver."
         }
       ],
       "images": [
