--- a/site/content/blocks/site/projects/projects-row-2.json
+++ b/site/content/blocks/site/projects/projects-row-2.json
@@ -10,7 +10,7 @@
       },
       "text": [
         {
-          "text": "Innovation",
+          "text": "Discovery",
           "color": "alphaDark"
         },
         {
@@ -19,7 +19,7 @@
           "variant": "h5"
         },
         {
-          "text": "Understand First. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt."
+          "text": "Recent drilling drilling has uncovered seven high-grade veins, the highest at 30,416.91 g/t silver."
         }
       ],
       "images": [
@@ -47,7 +47,7 @@
       },
       "text": [
         {
-          "text": "Innovation",
+          "text": "Prospect",
           "color": "alphaDark"
         },
         {
@@ -56,7 +56,7 @@
           "variant": "h5"
         },
         {
-          "text": "Understand First. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt."
+          "text": "The property is in an area that has long held the interest of geologists because of its close proximity to the high-grade underground Macassa gold mine."
         }
       ],
       "images": [
@@ -84,7 +84,7 @@
       },
       "text": [
         {
-          "text": "Innovation",
+          "text": "Prospect",
           "color": "alphaDark"
         },
         {
@@ -93,7 +93,7 @@
           "variant": "h5"
         },
         {
-          "text": "Understand First. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt."
+          "text": "The best results from the rock and drill core sampling returned grades of up to 10.31% Nickel, 4.9% Copper and 1% Cobalt."
         }
       ],
       "images": [
