--- a/site/content/blocks/site/projects/projects-row-1.json
+++ b/site/content/blocks/site/projects/projects-row-1.json
@@ -5,7 +5,7 @@
       "variant": "h2"
     },
     {
-      "text": "Drill for structure, mine for grade",
+      "text": "They key is to get moving",
       "variant": "medium"
     }
   ],
