mostly text changes

--- a/site/content/blocks/site/projects/projects-row-2.json
+++ b/site/content/blocks/site/projects/projects-row-2.json
@@ -51,7 +51,7 @@
           "color": "alphaDark"
         },
         {
-          "text": "Ebby-Otto",
+          "text": "Eby-Otto",
           "color": "omegaDarker",
           "variant": "h5"
         },
