adding more photos

--- a/site/content/blocks/site/projects/projects-row-1.json
+++ b/site/content/blocks/site/projects/projects-row-1.json
@@ -34,7 +34,7 @@
       ],
       "images": [
         {
-          "src": "../../../assets/site/projects/castle-mine.jpg",
+          "src": "../../../assets/site/projects/castle-mine.png",
           "alt": "alt text"
         }
       ],
