--- a/site/content/blocks/site/projects/projects-row-2.json
+++ b/site/content/blocks/site/projects/projects-row-2.json
@@ -24,7 +24,7 @@
       ],
       "images": [
         {
-          "src": "../../../assets/site/projects/castle-east.jpg",
+          "src": "../../../assets/site/projects/castle-east.png",
           "alt": "alt text"
         }
       ],
@@ -61,7 +61,7 @@
       ],
       "images": [
         {
-          "src": "../../../assets/site/projects/ebby-otto.jpg",
+          "src": "../../../assets/site/projects/ebby-otto.png",
           "alt": "alt text"
         }
       ],
@@ -98,7 +98,7 @@
       ],
       "images": [
         {
-          "src": "../../../assets/site/projects/nourricier.jpg",
+          "src": "../../../assets/site/projects/nourricier.png",
           "alt": "alt text"
         }
       ],
