massive changes, pray for me

--- a/site/content/blocks/site/projects/projects-row-1.json
+++ b/site/content/blocks/site/projects/projects-row-1.json
@@ -1,11 +1,11 @@
 {
   "text": [
     {
-      "text": "Projects",
-      "variant": "h2"
+      "text": "Overview",
+      "variant": "h1"
     },
     {
-      "text": "They key is to get moving",
+      "text": "Featuring Silver, Copper, Nickel, and Gold Discoveries",
       "variant": "medium"
     }
   ],
