--- a/site/content/blocks/site/projects/projects-row-2.json
+++ b/site/content/blocks/site/projects/projects-row-2.json
@@ -88,7 +88,7 @@
           "color": "alphaDark"
         },
         {
-          "text": "Nourricier",
+          "text": "Graal",
           "color": "omegaDarker",
           "variant": "h5"
         },
