final of waynes changes

--- a/site/content/blocks/site/projects/projects-row-1.json
+++ b/site/content/blocks/site/projects/projects-row-1.json
@@ -1,4 +1,14 @@
 {
+  "text": [
+    {
+      "text": "Overview",
+      "variant": "h1"
+    },
+    {
+      "text": "Featuring Silver, Copper, Nickel, and Gold Discoveries",
+      "variant": "medium"
+    }
+  ],
   "collection": [
     {
       "container": {
