--- a/site/content/blocks/site/projects/projects-row-2.json
+++ b/site/content/blocks/site/projects/projects-row-2.json
@@ -19,7 +19,7 @@
           "variant": "h5"
         },
         {
-          "text": "The only permitted underground asset in the Cobalt camp. Past production totalled 9.5 million oz silver, and 300,000 lbs cobalt."
+          "text": "One of the highest-grade underground mines in the Cobalt Camp. Past production totalled 9.5 million oz silver, and 300,000 lbs cobalt."
         }
       ],
       "images": [
