--- a/site/package.json
+++ b/site/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^10.0.0",
     "gatsby": "^3.10.2",
     "gatsby-plugin-algolia": "^0.22.1",
+    "gatsby-plugin-gtag": "^1.0.13",
     "gatsby-plugin-mailchimp": "^5.2.2",
     "gatsby-plugin-manifest": "^3.13.0",
     "gatsby-source-contentful": "^5.12.0",
