--- a/site/content/blocks/site/projects/projects-row-1.json
+++ b/site/content/blocks/site/projects/projects-row-1.json
@@ -35,6 +35,7 @@
       "images": [
         {
           "src": "../../../assets/site/projects/castle-east.png",
+          "radius": "xl",
           "alt": "alt text"
         }
       ],
@@ -72,6 +73,7 @@
       "images": [
         {
           "src": "../../../assets/site/projects/ebby-otto.png",
+          "radius": "xl",
           "alt": "alt text"
         }
       ],
@@ -109,6 +111,7 @@
       "images": [
         {
           "src": "../../../assets/site/projects/nourricier.png",
+          "radius": "xl",
           "alt": "alt text"
         }
       ],
