should work now

--- a/site/content/blocks/site/projects/projects-row-2.json
+++ b/site/content/blocks/site/projects/projects-row-2.json
@@ -25,7 +25,7 @@
       "images": [
         {
           "src": "../../../assets/site/projects/castle-mine.png",
-          "radius": "xl",
+          "radius": "lg",
           "alt": "alt text"
         }
       ],
@@ -63,7 +63,7 @@
       "images": [
         {
           "src": "../../../assets/site/projects/beaver-mine.jpg",
-          "radius": "xl",
+          "radius": "lg",
           "alt": "alt text"
         }
       ],
@@ -101,7 +101,7 @@
       "images": [
         {
           "src": "../../../assets/site/projects/violet-mine.jpg",
-          "radius": "xl",
+          "radius": "lg",
           "alt": "alt text"
         }
       ],
