--- a/site/content/blocks/site/projects/projects-row-1.json
+++ b/site/content/blocks/site/projects/projects-row-1.json
@@ -35,7 +35,7 @@
       "images": [
         {
           "src": "../../../assets/site/projects/castle-east.png",
-          "radius": "xl",
+          "radius": "lg",
           "alt": "alt text"
         }
       ],
@@ -73,7 +73,7 @@
       "images": [
         {
           "src": "../../../assets/site/projects/ebby-otto.png",
-          "radius": "xl",
+          "radius": "lg",
           "alt": "alt text"
         }
       ],
@@ -111,7 +111,7 @@
       "images": [
         {
           "src": "../../../assets/site/projects/nourricier.png",
-          "radius": "xl",
+          "radius": "lg",
           "alt": "alt text"
         }
       ],
