--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lint:fix": "eslint ./src --fix"
   },
   "dependencies": {
+    "@contentful/rich-text-plain-text-renderer": "^17.0.0",
     "@headlessui/react": "^2.2.3",
     "algoliasearch": "^4.22.1",
     "autoprefixer": "^10.4.19",
@@ -23,6 +24,7 @@
     "framer-motion": "^12.11.4",
     "gatsby": "^5.14.3",
     "gatsby-omni-font-loader": "^2.0.2",
+    "gatsby-plugin-algolia": "^1.0.3",
     "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-image": "^3.13.1",
     "gatsby-plugin-manifest": "^5.13.1",
